[package]
name = "apollo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["full"] }
reqwest = "0.11.22"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3.0"
actix-web = "4"
actix-cors = "0.6"
tiberius = { version = "0.12.2", features = ["chrono", "rust_decimal"] }
bb8 = "0.8.1"
bb8-tiberius = "0.15.0"
tokio-util = "0.7.10"
async-std = "1.12.0"
once_cell = "1.18.0"
anyhow = "1.0.75"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.33.1"
rayon = "1.5.1"
dotenv = "0.15.0"
